fix extra space at right

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,19 @@
 $color: #212529;
 
+// body {
+// 	margin: 0 auto;
+// 	width: 100%;
+// }
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .ctable {
 	max-width: 720px;
     margin-right: auto;
